--- a/src/Styling/Schedule.css
+++ b/src/Styling/Schedule.css
@@ -6,7 +6,8 @@
 table{
     width: 90%;
     margin: auto;
-    border: 2px solid black
+    border: 4px solid black;
+    border-collapse: collapse;
 }
 
 thead{
@@ -23,6 +24,7 @@ tbody{
 
 td{
     padding: 1em;
+    border: 1px solid black;
 }
 
 .btn{
