--- a/src/Styling/Calender.css
+++ b/src/Styling/Calender.css
@@ -1,5 +1,37 @@
 
+.cal-container{
+    width: 100%;
+    margin: auto;
+}
 
-td{
- background-color: red;
+.cal-container table{
+    width: 80%;
+    margin: auto;
+    border: 4px solid black;
+    border-collapse: collapse;
+}
+
+
+
+.calender-header{
+    background-color: lightgray;
+}
+
+.calender-header th{
+    background-color: lightgray;
+}
+
+.weekday{
+    background-color: purple;
+}
+
+.calender-body{
+    padding: 1em;
+    border: 1px solid black;
+    background-color: lightblue;
+}
+
+.calender-body td{
+    padding: 1em;
+    border: 1px solid black;
 }
